updates for supporting docs

--- a/dfa/src/UI/embc-dfa/src/app/core/components/file-upload/file-upload.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/file-upload/file-upload.component.html
@@ -13,7 +13,7 @@
   <p class="drag-text">
     Drag and drop or <a class="browse-link"><u>browse</u></a> your files
   </p>
-  <p class="file-type">Allowed file types - pdf, jpg, jpeg, png</p>
+  <p class="file-type">Allowed file types - {{allowedFileExtensionsList}}</p>
   <p class="file-format">Restricted characters in file name:</p>
   <p class="invalid-characters">
     ~ " # % & * : . &lt; &gt; ? / &#123; | &#125;. Leading and trailing spaces
