--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-items-by-room/damaged-items-by-room.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-items-by-room/damaged-items-by-room.component.html
@@ -286,6 +286,8 @@
                     <app-file-upload
                       [noOfAttachments]="1"
                       (attachedFile)="setFileFormControl($event)"
+                      [allowedFileTypes]="allowedFileTypes"
+                      allowedFileExtensionsList="pdf, jpg, jpeg, png"
                     >
                     </app-file-upload>
                   </div>
