--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
@@ -108,6 +108,8 @@
                     <app-file-upload
                       [noOfAttachments]="1"
                       (attachedFile)="setFileFormControl($event)"
+                      [allowedFileTypes]="allowedFileTypes"
+                      allowedFileExtensionsList=".pdf, .doc, .docx, .png, .jpeg, .jpg, .ppt, .pptx, .xls, .xlsx"
                     >
                     </app-file-upload>
                   </div>
